#443 Adds correct if mechion planet can build new mechion population
Fixes deprecation of new Integer() method.